# ic-repo-checks

./: Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: release.yml  rust_checks.yml
src/: action_utils.rs  check_result.rs  copilot.rs  dependabot.rs  github_utils.rs  inputs.rs  main.rs  quality.rs  rails_projects.rs  results.rs  security.rs
src/checks/: branch_protection.rs  mod.rs  quality.rs  rails_projects.rs
