[package]
name = "ic-repo-checks"
description = "Checks for compliance with IdeaCrew repository standards and workflows."
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[dependencies]
github-actions = { version = "0.0.4" }
http = { version = "1.3.1" }
octocrab = { version = "0.47.0", features = ["retry"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
http-body-util = { version = "0.1.3" }
bytes = { version="1.10.1" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
